[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/entities/player/PlayerAnimations.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/player/NetworkPlatformerPlayer.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://src/effects/Trail2D.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 7, 11 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 4, 6 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 7, 11 )

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0, 0.189944, 0.614525, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.738281, 0.738281, 0.738281, 0.756863, 0.901961, 0.901961, 0.901961, 0.780392, 1, 1, 1, 0.913725 )

[node name="PlatformerPlayer" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprites" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
shape = SubResource( 16 )

[node name="PushBox" type="Area2D" parent="." groups=["pushbox"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushBox"]
position = Vector2( 0, -6 )
shape = SubResource( 9 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -11 )
shape = SubResource( 8 )

[node name="CenterTrail" parent="." instance=ExtResource( 4 )]
position = Vector2( 3.93925, -4.3852 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 15 )
offset = Vector2( 0, -6.5 )
active = false

[node name="DashTrail" parent="." instance=ExtResource( 4 )]
width = 2.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 15 )
offset = Vector2( 0, -8 )
active = false

[node name="DashTrail2" parent="." instance=ExtResource( 4 )]
width = 2.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 15 )
offset = Vector2( 0, -4 )
active = false

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 3.93925, -5.88959 )
stream = ExtResource( 3 )
volume_db = -5.0

[connection signal="area_entered" from="PushBox" to="." method="_on_PushBox_area_entered"]
[connection signal="area_exited" from="PushBox" to="." method="_on_PushBox_area_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
